# UAMMD-structured

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  comp_dep.info  environment.yml  install.sh  preamble.h  pyproject.toml  setup.py
.github/workflows/: ci.yml  conda.yml  docs.yml
Examples/: LennardJones.py  LennardJonesBatches.py  README.md  explore.sh  launchBatch.sh  plotting.sh
Examples/IdealGas/: IdealGas.py
Examples/LennardJones/: LennardJones.py
Examples/LennardJonesBatches/: LennardJonesBatches.py
Examples/PSE/: PSE.py
Examples/Patches/: Patches.py  parameters.json
Examples/Patches/scripts/: generatePatches.py
Examples/WormLikeChain/: WLC.py
Examples/WormLikeChainCompression/: WLCCompression.py
Tests/: README.txt
Tests/AFM/: parameters.json
Tests/AFM/scripts/: analisys.py  generateAFMTest.py
Tests/Bonds/: parameters.json
Tests/Bonds/Bond2HarmonicAnisotropic/: parameters.json
Tests/Bonds/scripts/: analisys.py  generateBondsTest.py  get_r0.py
Tests/ConditionalListSet/: parameters.json
Tests/ConditionalListSet/scripts/: analisys.py  generateConditionalListSetTest.py
Tests/Electrostatics/scripts/: generateElectrostaticsTest.py
Tests/ForceBetweenSets/: parameters.json  run.sh
Tests/ForceBetweenSets/scripts/: analyze.py  generateTest.py
Tests/Helix/DynamicHelixCosine/: parameters.json
Tests/Helix/DynamicHelixExponential/: parameters.json
Tests/Helix/FixedHelixCosine/: parameters.json
Tests/Helix/FixedHelixExponential/: parameters.json
Tests/Helix/scripts/: helixGeneration.py
Tests/Hessian/: runAllTests.sh
Tests/Hessian/BestChenHummerAngular/: parameters.json
Tests/Hessian/Bond1FixedHarmonic/: parameters.json
Tests/Hessian/Bond2FENE/: parameters.json
Tests/Hessian/Bond2Harmonic/: parameters.json
Tests/Hessian/Bond2HarmonicAnisotropic/: parameters.json  run.sh
Tests/Hessian/Bond2LennardJones/: parameters.json
Tests/Hessian/Clashed/: parameters.json
Tests/Hessian/DLVO/: parameters.json
Tests/Hessian/DebyeHuckel/: parameters.json
Tests/Integrators/: parameters.json
Tests/NonBonded/: parameters.json
Tests/PairParameterHandler/: parameters.json
Tests/PairwiseForce/: runAllTests.sh
Tests/PairwiseForce/Bond2/: run.sh  (+1 more)
Tests/Python/: parameters.json  pythonTest.py
Tests/RAP/: parameters.json
Tests/Sets/: parameters.json
Tests/SingleParameterHandler/: parameters.json
Tests/Stress/: parameters.json
Tests/ThermodynamicIntegration/: parameters.json
USCM/: Components.json  Data.json  USCM  USCM.py
USCM/Options/: __init__.py  add.py  compile.py  extensions.py  lst.py  path.py  remove.py  template.py  upgrade.py
USCM/Templates/: Templates.json
dev/afm/: afm.py
devTest/: generateTest.py
devtools/conda-build/: README.md  build.sh  meta.yaml
devtools/conda-envs/: build_env.yaml
docs/: .readthedocs.yaml  Compiling UAMMD-structured.rst  Execution.rst  First Example.rst  Global.rst  GlobalData.rst  Input format.rst  Input implementation.rst  Input structure.rst  Input.rst  Integrator.rst  Integrators.rst  List of components.rst  Makefile  Online Examples.rst  Overview.rst  ParticleData.rst  Simulation Steps.rst  Simulation.rst  SimulationStep.rst  State.rst  System.rst  Topology.rst  Tutorial 0: Installation.rst  Tutorial 1: Basic usage.rst  Tutorial 2: Lennard-Jones fluid.rst  Tutorial 3: Defining groups.rst  Tutorial 4: Batching.rst  Tutorials introduction.rst  UAMMD extension.rst  UAMMD installation.rst  UAMMD-structured compilation and installation.rst  UAMMD-structured installation.rst  UAMMD-structured.rst  UAMMD.rst  USCM.rst  What is UAMMD and what is not?.rst  What is UAMMD-structured and what is not?.rst  What is pyUAMMD and what is not?.rst  Workflow.rst  (+4 more)
docs/Implementation/: Developers.rst
docs/Utilities/: Batching.rst  Groups.rst  Scheduling the components.rst
docs/_scripts/: create.py  createComponents.py
docs/img/: scheme.eps
docs/pyUAMMD/: Installation.rst  Introduction.rst
main/: UAMMDlauncher.cu
pyUAMMD/: __init__.py  simulation.py
pyUAMMD/appending/: __init__.py  forceField.py  glb.py  integrator.py  patchyParticles.py  simulationStep.py  state.py  structure.py  system.py
pyUAMMD/utils/: common.py
scripts/logo/: Makefile  genlogo.cpp  genlogo.py
structured/: Components.json  Computables.json  Data.json  UAMMDstructured.cuh  preamble.h
structured/Constraint/: Constraint.cuh
structured/ForceFields/: ForceFields.cuh
structured/GlobalData/: GlobalData.cuh
structured/InputOutput/: BlocksFile.cuh  InputOutput.cuh  dcd.cuh  psf.cuh
structured/Integrator/: ICM.cuh  IntegratorBasic.cuh  IntegratorUtils.cuh  brownianNVT.cuh  langevinNVT.cuh  steepestDescent.cuh
structured/Interactor/: AFMInteractor.cuh  BasicParameters.cuh  BondedInteractor.cuh  CenterOfMassInteractor.cuh  GAMD.cuh  GenericPotentialLoader.cuh  GenericSurfaceInteractor.cuh  PairInteractor.cuh  PlatesInteractor.cuh  QCMInteractor.cuh  SetsInteractor.cuh  SphericalShellInteractor.cuh  UmbrellaInteractor.cuh
structured/Measures/: MeasuresBasic.cuh  MeasuresTransforms.cuh
structured/NeighbourList/: ConditionedListSetBase.cuh  ConditionedVerletListSet.cuh  FixedNeighbourList.cuh
structured/ParticleData/: ExtendedParticleData.cuh
structured/Potentials/: CommonParameters.cuh  CommonPotentials.cuh  Potentials.cuh
structured/Simulation/: Simulation.cuh  SimulationAFM.cuh  SimulationPlates.cuh  SimulationPulling.cuh  SimulationQCM.cuh  SimulationSphere.cuh  SimulationStep.cuh  SimulationUmbrellaAlongVector.cuh  SimulationUmbrellaCenterOfMassDistance.cuh
structured/SimulationStep/: GenericSimulationStepLoader.cuh
structured/System/: ExtendedSystem.cuh
structured/Topology/: Topology.cuh
structured/Types/: Types.cuh
structured/Utils/: conditions.cuh  exclusionsList.cuh  groupUtils.cuh  misc.cuh  parameterHandler.cuh  selectors.cuh
structured/Wrapper/: Wrapper.cuh
structured/include/: UAMMDstructured.cuh  UAMMDstructuredBase.cuh
structured/patches/: inline.patch
tests_pytest/: README.md  test_hessian_measure.py  test_imports.py  test_simulation.py  utils.py
(+1037 files in other folders)
